--- a/css/menu.css
+++ b/css/menu.css
@@ -1,8 +1,4 @@
-.menu {
-    font-weight: 500;
-    border: 1px solid black;
-    padding: 1.6rem;
-    flex: 30%;
-    margin-right:.25rem;
-    height:100%;
+.menu .btn-group-vertical {
+    /* definimos que a largura do menu é de 100%, fazendo com que os botões ocupem toda a largura */
+    width:100%;
 }
